lib/libui/bottom_pane/chat_composer/snapshots/libui__bottom_pane__chat_composer__tests__footer_collapse_plan_queue_mode_only.snap
---
source: lib/libui/bottom_pane/chat_composer/chat_composer_tests.rs
expression: "render_test_backend_debug(width, height, |f|\n{ composer.render(f.area(), f.buffer_mut()); })"
---
"                    "
"› Test              "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"  98% context left  "
