lib/libui/bottom_pane/chat_composer/snapshots/libui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_quit.snap
---
source: lib/libui/bottom_pane/chat_composer/chat_composer_tests.rs
expression: "render_test_backend_debug(width, height, |f|\n{ composer.render(f.area(), f.buffer_mut()); })"
---
"                                                                                                    "
"› Ask FreeChaOS to do anything                                                                      "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ctrl + c again to quit                                                                            "
